fix: link text-decoration style on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -100,11 +100,17 @@ a:focus-visible {
 
   a {
     color: var(--primary-color);
-    text-decoration: underline var(--primary-pale-color) 1.5px;
+    text-decoration-color: var(--primary-pale-color);
+    text-decoration-thickness: 1.5px;
 
     &:hover {
       text-decoration-color: var(--primary-color);
     }
+
+    @media (max-width: 425px) {
+      text-decoration-color: unset;
+      text-decoration-thickness: auto;
+    }  
   }
 
   img {
